# fluent-forever-v2

./: .coverage  .gitignore  .pre-commit-config.yaml  CARD_FORMAT.md  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  CLI_COMMAND_MAPPING.md  CLI_TEST_PLAN.md  CONFIG_SIMPLIFICATION_PLAN.md  CONTEXT_SEPARATION_PRINCIPLES.md  CONTEXT_SYSTEM_EVALUATION_PROMPT.md  DESIGN_DECISIONS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  MULTI_CARD_SYSTEM.md  PHASE_1_PIPELINE_ASSIGNMENT_PLAN.md  PHASE_2_ENHANCED_DATA_PROVIDERS_PLAN.md  PHASE_2_IMPLEMENTATION_PLAN.md  QUEUE_OPTIMIZATIONS.md  README.md  STRUCTURAL_REFACTOR_PLAN.md  SYSTEM_DESIGN.md  TESTING_FRAMEWORK.md  UNIT_TESTING_IMPLEMENTATION.md  UNIT_TESTING_STRATEGY.md  USER_GUIDE.md  WORKFLOW_REFACTOR.md  activate_env.sh  automation.py  backwards_compatibility_report.md  batch_config.json  claude.md  config.json  conjugations.json  context-system-chat-prompts.md  context-system-implementation.md  context-system-maintenance-prompts.md  context-system-plan.md  core_test_plan.md  create_pronunciation_cards.py  (+36 more)
.claude/commands/: context-update.md
config/: core.json
config/cli/: defaults.json
config/environments/: development.json  production.json  testing.json
config/pipelines/: _template.json  conjugation.json  vocabulary.json
config/providers/: _template.json  anki.json  forvo.json  openai.json  runware.json
context/: README.md
context/development/: adding_pipelines.md  architecture.md
context/methodologies/: overview.md
context/operations/: claude_guide.md
context/refactor/: handoff_template.md  prompts.md  refactor_summary.md
context/reference/: cli_reference.md
context/system/: core-concepts.md  data-flow.md  overview.md
context/testing/: implementation-planning.md  overview.md
context/user/: README.md  quick_start.md  troubleshooting.md
context/vocabulary_pipeline_planning/: README.md  stage2_technical_implementation.md
context/vocabulary_refactor/: Español_structure.md  IPA_tags.md  README.md  example_llamar_entries.json  phase2_technical_implementation.md  stage1_technical_implementation.md  stage1b_technical_implementation.md  stage2_technical_implementation.md
context/workflows/: common-tasks.md  extending-cli.md  (+5 more)
docs/: LORA_TRAINING_GUIDE.md
media/: .index.json
project_archive/: STRUCTURAL_REFACTOR_PLAN.md
src/: __init__.py
staging/: claude_batch_20250814_1330.json  claude_batch_20250814_1450.json  claude_batch_20250814_1551.json  claude_batch_20250818_0829.json  claude_batch_20250818_0830.json  claude_batch_20250818_0839.json  claude_batch_20250818_0903.json  claude_batch_20250818_0931.json  claude_batch_20250818_0942.json  claude_batch_20250818_1010.json  claude_batch_20250818_1117.json  claude_batch_20250824_1009.json  claude_batch_20250824_1022.json  claude_batch_20250824_1040.json  claude_batch_20250825_0942.json  claude_batch_20250825_1044.json  claude_batch_20250825_1057.json  claude_batch_20250825_1109.json  claude_batch_20250825_1122.json  claude_batch_20250827_0943.json  claude_batch_20250827_0951.json  claude_batch_20250827_0957.json  claude_batch_20250827_1005.json  claude_batch_20250828_1014.json  claude_batch_20250828_1023.json  claude_batch_20250905_1330.json  claude_batch_20250905_1339.json  claude_batch_20250905_1340.json  claude_batch_20250905_1406.json  claude_batch_20250905_1418.json  claude_batch_20250905_1427.json  claude_batch_20250905_1436.json  claude_batch_20250905_1449.json  claude_batch_20250905_1458.json  claude_batch_20250905_2251.json  claude_batch_20250905_2255.json  claude_batch_20250905_2305.json  claude_batch_20250905_2309.json  claude_batch_20250905_2317.json  claude_batch_20250905_2318.json  (+18 more)
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_validation_gates.py  test_current_system.py
(+488 files in other folders)
