[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  validate-anki-templates = validation.anki.template_validator:validate_templates_and_fields
  sync-anki-all = cli.entrypoints:sync_anki_all
  media-generate = cli.entrypoints:media_generate
  regenerate-images = cli.entrypoints:regenerate_images
  run-media-then-sync = cli.entrypoints:run_media_then_sync


